--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    #- uses: actions/checkout@v1
+    - name: Git clone my repo  
+      uses: actions/checkout@v1
     
+    - name: List current folder
+      run: ls -la
+
     - name: Run a one-line script
       run: echo Hello, world!
     
@@ -33,8 +37,10 @@ jobs:
         echo "App Name: ${{ env.APP_NAME }}"
         echo "Pack Name: ${{ env.DEPLOY_PACKAGE_NAME }}"
     
-    - name: List current folder
-      run: ls -la
+    - name: Test some packages
+      run: aws --version
+      
+    
       
         
       
