--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ on:
 
 jobs:
   my-testing:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,23 +23,35 @@ jobs:
     - name: List current folder
       run: ls -la
 
-    - name: Run a one-line script
-      run: echo Hello, world!
-    
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: Run testing
+      run: echo Testing is running...
     
     - name: Print env variables
       run: | 
         echo "App Name: ${{ env.APP_NAME }}"
-        echo "Pack Name: ${{ env.DEPLOY_PACKAGE_NAME }}"
+   
+
+  my-deploy:
+    runs-on: ubuntu-latest
+    needs: [my-testing]
     
-    - name: Test some packages
-      run: aws --version
+    steps:
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
       
-    
+      - name: Print env variables
+        run: | 
+          echo "Pack Name: ${{ env.DEPLOY_PACKAGE_NAME }}"
+          
+      - name: Test some packages if they are installed
+        run: | 
+          aws --version
+          zip --v
+      
+      
+      
       
         
       
