--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,16 +45,16 @@ jobs:
           composer --version
           phpunit --version
 
-      - name: Install PHPUnit
-        run: composer require phpunit/phpunit ^7
+      #- name: Install PHPUnit
+      #  run: composer require phpunit/phpunit ^7
 
-      - name: Check again some packages if they are installed
-        run: | 
-          composer --version
-          phpunit --version
+      #- name: Check again some packages if they are installed
+      #  run: | 
+      #    composer --version
+      #    phpunit --version
     
-      #- name: Runt PHPUnit tests
-      #  run: composer tests
+      - name: Runt PHPUnit tests
+        run: composer tests
 
       #- name: Test some packages if they are installed
       #  run: | 
