--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
    
 
   my-deploy:
-    runs-on: [ubuntu-18.04]
+    runs-on: ubuntu-latest
  #   needs: [my-testing]
     
     steps:
@@ -47,7 +47,7 @@ jobs:
           phpunit --version
 
       - name: Install PHPUnit
-        run: composer require phpunit/phpunit
+        run: composer require phpunit/phpunit ^7
 
       - name: Check again some packages if they are installed
         run: | 
@@ -57,11 +57,6 @@ jobs:
       - name: Runt PHPUnit tests 
         run: composer tests
 
-      #- name: Test some packages if they are installed
-      #  run: | 
-      #    @aws --version
-      #    #zip --v
-      
       
       
       
