--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ env:
 on:
   push:
     branches: 
-      - master
-      #- dev
+      #- master
+      - dev
 
 jobs:
 #  my-testing:
@@ -46,7 +46,13 @@ jobs:
           composer --version
           phpunit --version
 
-      - name: Install PHPUnit
+       - name: Install Composer
+          run: |
+            apt-get update && apt-get install -y unzip
+            curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+            composer install
+
+        - name: Install PHPUnit
         run: composer require phpunit/phpunit ^7
 
       - name: Check again some packages if they are installed
