--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 #-----------------------------------------
-# Basic Deploy
+# Framework Deploy
 #-----------------------------------------
-name: Basic Deploy
+name: Framework Deploy
 env:
   APP_NAME: APPHP MVC FRAMEWORK
   DEPLOY_PACKAGE_NAME: "apphp-deploy-${{ github.sha }}"
 
-#  [push]   
+# Run on [push]
 on:
   push:
     branches: 
@@ -14,23 +14,21 @@ on:
       - dev
 
 jobs:
-  runs-on: ubuntu-latest
-
-  my-testing:
+#  testing:
 #    runs-on: ubuntu-latest
 
-    steps:
-    - name: Run testing
-      run: echo Testing is running...
+#    steps:
+#    - name: Run testing
+#      run: echo Testing is running...
 #    
 #    - name: Print env variables
 #      run: | 
 #        echo "App Name: ${{ env.APP_NAME }}"
    
 
-  my-deploy:
-#    runs-on: ubuntu-latest
- #   needs: [my-testing]
+  deploy:
+    runs-on: ubuntu-latest
+ #   needs: [testing]
     
     steps:
       - name: Print env variables
@@ -48,14 +46,6 @@ jobs:
           composer --version
           phpunit --version
 
-#      - name: Re-install PHPUnit
-#        run: composer require phpunit/phpunit ^7
-#
-#      - name: Check again some packages if they are installed
-#        run: |
-#          composer --version
-#          phpunit --version
-    
-      - name: Runt PHPUnit tests 
+      - name: Runt PHPUnit tests
         run: composer tests
 
