--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,19 @@ jobs:
           composer --version
           phpunit --version
 
+       - name: Install PHPUnit
+        run: composer require phpunit/phpunit ^7
+
+      - name: Check again some packages if they are installed
+        run: |
+          composer --version
+          phpunit --version
+
       - name: Runt PHPUnit tests
         run: composer tests
+
+
+
+
+
 
