--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,26 @@
 {
+    "name": "apphp/php-mvc-framework",
+    "type": "project",
+    "description": "The ApPHP Framework.",
+    "keywords": [
+        "framework",
+        "mvc",
+        "rapid-development",
+        "apphp"
+    ],
+    "homepage": "https://apphp.com",
+    "license": "LGPL",
+    "authors": [
+        {
+            "name": "ApPHP",
+            "homepage": "https://apphp.com/php-framework"
+        }
+    ],
     "config": {
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
