--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
+
     "config": {
         "sort-packages": true
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=7.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
-        "apphp/php-mvc-framework": "^1.2.2"
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
