Changed PHPUnit version for automation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
           php --version
           phpunit --version
 
-      - name: Install PHPUnit
-        run: composer require phpunit/phpunit ^8.5
+#      - name: Install PHPUnit
+#        run: composer require phpunit/phpunit ^7.5
 
       - name: Check again some packages if they are installed
         run: |
