--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1 || ^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
