--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,45 @@
 {
-    "name": "apphp/php-mvc-framework",
-    "type": "project",
-    "description": "The ApPHP Framework.",
-    "keywords": [
-        "framework",
-        "mvc",
-        "rapid-development",
-        "apphp"
-    ],
-    "homepage": "https://apphp.com",
-    "license": "LGPL",
-    "authors": [
-        {
-            "name": "Samuel Akopyan",
-            "email": "admin@apphp.com",
-            "homepage": "https://apphp.com/php-framework",
-            "role": "Founder and project lead"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "sort-packages": true
-    },
-    "require": {
-        "php": ">=7.1 || ^8"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "tests-result": "phpunit --colors=always --log-junit test-results.xml",
-        "tests": "phpunit --colors=always",
-        "test": "phpunit --colors=always --filter"
+  "name": "apphp/php-mvc-framework",
+  "type": "project",
+  "description": "The ApPHP Framework.",
+  "keywords": [
+    "framework",
+    "mvc",
+    "rapid-development",
+    "apphp"
+  ],
+  "homepage": "https://apphp.com",
+  "license": [
+    "LGPL-2.0-or-later",
+    "MIT"
+  ],
+  "authors": [
+    {
+      "name": "Samuel Akopyan",
+      "email": "admin@apphp.com",
+      "homepage": "https://apphp.com/php-framework",
+      "role": "Founder and project lead"
     }
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "sort-packages": true
+  },
+  "require": {
+    "php": ">=7.1 || ^8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "tests-result": "phpunit --colors=always --log-junit test-results.xml",
+    "tests": "phpunit --colors=always",
+    "test": "phpunit --colors=always --filter"
+  }
 }
